Modified place-holder text for status, invite text fields. Added style to prevent place-holder text to inherit text-align

--- a/public/rsrcs/css/widgets.css
+++ b/public/rsrcs/css/widgets.css
@@ -12,6 +12,7 @@ input::-moz-focus-inner {
     color: graytext;
     position: absolute;
     cursor: text;
+    text-align: left;
 }
 
 .button-link {
